<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/corner"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.FullRickFragment"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:id="@+id/error"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/title_2"/>

        <LinearLayout
            android:id="@+id/wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">

                <ImageView
                    android:id="@+id/main_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:background="@drawable/gradient_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/character_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="100dp"
                            android:textSize="@dimen/title_2"
                            android:textStyle="bold"
                            android:maxLines="2"
                            tools:text="@tools:sample/full_names" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <View
                                android:id="@+id/indicator"
                                android:layout_width="9dp"
                                android:layout_height="9dp"
                                android:layout_gravity="center"
                                android:background="@drawable/circle" />

                            <TextView
                                android:id="@+id/status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:textStyle="normal"
                                tools:text="@tools:sample/cities"/>

                        </LinearLayout>

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/share_button"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center|end"
                        android:layout_marginEnd="@dimen/card_margin"
                        android:background="@drawable/circle"
                        android:src="@drawable/ic_baseline_reply_24"/>

                </FrameLayout>

            </FrameLayout>

            <TextView
                android:text="@string/episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="textStart"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:textStyle="bold"
                android:textSize="@dimen/title_1"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/card_margin"
                    android:layout_gravity="center"/>

            <ru.alek.rickmortyviewer.presentation.character_card.recyclerviews.EpisodesRecyclerView
                android:id="@+id/episodes"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/episode_row" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_text"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:orientation="horizontal">

                <View
                    android:layout_width="220dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center|start"
                    android:layout_marginEnd="@dimen/card_margin"
                    android:background="?android:textColor"/>

                <TextView
                    android:id="@+id/episode_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:layout_gravity="center|end"
                    android:text="@string/more_info"/>

            </LinearLayout>

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_top_text"
                android:paddingBottom="@dimen/margin_top_text"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_gravity="start"
                android:scrollbars = "vertical"
                android:nestedScrollingEnabled="true"
                android:text="@string/fish"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>